斜め背景をコンポーネント化

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,4 +5,6 @@
 :root {
   --foreground-rgb: 255, 255, 255;
   --background-rgb: 0, 0, 0;
+  --color-brand: #3142DD;
+  --color-primary: #DDD631;
 }
