斜め部分のセクションをコンポーネント化、ドット背景の追加

--- a/app/layout.css
+++ b/app/layout.css
@@ -2,3 +2,7 @@
   color: rgb(var(--background-rgb));
   background: rgb(var(--foreground-rgb));
 }
+
+.c-bg-marker-primary {
+  background: linear-gradient(transparent 50%, var(--color-primary) 0%);
+}
