--- a/components/elements/background/skew.module.css
+++ b/components/elements/background/skew.module.css
@@ -1,14 +1,19 @@
 .background {
-  /*  py-60相当の角度をつける */
-  clip-path: polygon(
-    0 15rem, /* 上の角度 */
-    100% 0,
-    100% calc(100% - 15rem), /* 下の角度 */
-    0 100%
-  );
+  position: relative;
+  z-index: 0;
+}
+.background::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  transform: skewY(-5deg);
 }
 /* ドット背景 */
-.bgdot {
+.bgdot::after {
   background-color: white;
   background-image: radial-gradient(black 2%, transparent 3%);
   background-size: 40px 40px;
